@@ -1,11 +1,11 @@
 //
-// File: PhredPoly.cpp
+// File: PhredPhd.cpp
 // Created by: Sylvain Gaillard
-// Created on: Fri Oct 31 2008
+// Created on: Wed Nov 5 2008
 //
 
 /*
-Copyright or © or Copr. CNRS, (October 31, 2008)
+Copyright or © or Copr. CNRS, (November 5, 2008)
 
 This software is a computer program whose purpose is to provide classes
 for sequences analysis.
@@ -37,7 +37,7 @@ The fact that you are presently reading this means that you have had
 knowledge of the CeCILL license and that you accept its terms.
 */
 
-#include "PhredPoly.h"
+#include "PhredPhd.h"
 
 // From Utils:
 #include <Utils/TextTools.h>
@@ -47,45 +47,75 @@ using namespace bpp;
 
 /******************************************************************************/
 
-PhredPoly::PhredPoly(double ratio) : _ratio(ratio) {}
+PhredPhd::PhredPhd(double quality, unsigned int lframe, unsigned int rframe) : _quality(quality), _lframe(lframe), _rframe(rframe) {}
 
 /******************************************************************************/
 
-void PhredPoly::appendFromStream(istream & input, VectorSequenceContainer & vsc) const throw (Exception) {
-  if (!input) { throw IOException ("PhredPoly::read: fail to open stream"); }
+void PhredPhd::appendFromStream(istream & input, VectorSequenceContainer & vsc) const throw (Exception) {
+  if (!input) { throw IOException ("PhredPhd::read: fail to open stream"); }
 
   string temp, name, sequence = "";  // Initialization
-
-  // Read first line
-  if (!input.eof()) {
-    getline(input, temp, '\n');  // Copy current line in temporary string
-    StringTokenizer st(temp, " ");
-    name = st.getToken(0);
-  }
+  vector<double> q;
 
   const Alphabet * alpha = vsc.getAlphabet();
-  // Main loop : for all other lines
+  // Read sequence info
+  // Main loop : for all lines
   while (!input.eof()) {
     getline(input, temp, '\n');  // Copy current line in temporary string
     StringTokenizer st(temp, " ");
-    if (st.numberOfRemainingTokens() == 12) {
-      double a = TextTools::toDouble(st.getToken(3));
-      double b = TextTools::toDouble(st.getToken(7));
-      if (a < b) {
-        double t = a;
-        a = b;
-        b = t;
+    if (st.hasMoreToken()) {
+      if (st.getToken(0) == "BEGIN_SEQUENCE") {
+        name = st.getToken(1);
       }
-      vector<string> v;
-      v.push_back(st.getToken(0)); // Get the called base
-      if (b / a > this->_ratio) {
-        v.push_back(st.getToken(4)); // Get the uncalled base if relative picks areas are similar
+      string flag = st.getToken(0);
+      while (flag != "END_SEQUENCE" && !input.eof()) {
+        getline(input, temp, '\n');
+        StringTokenizer st2(temp, " ");
+        if (st2.hasMoreToken()) {
+          flag = st2.getToken(0);
+        }
+        if (flag == "BEGIN_DNA") {
+          while (flag != "END_DNA" && !input.eof()) {
+            getline(input, temp, '\n');
+            StringTokenizer st3(temp, " ");
+            if (st3.hasMoreToken()) {
+              flag = st3.getToken(0);
+              if (alpha->isCharInAlphabet(flag) && st3.numberOfRemainingTokens() == 3) {
+                sequence += flag;
+                q.push_back(TextTools::toInt(st3.getToken(1)));
+              }
+            }
+          }
+        }
       }
-      sequence += alpha->getGeneric(v);
     }
   }
-  if(name == "") throw Exception("PhredPoly::read: sequence without name!");
+  // Sequence creation
+  if(name == "") throw Exception("PhredPhd::read: sequence without name!");
   Sequence * seq = new Sequence(name, sequence, alpha);
+  // Filter sequence
+  for (unsigned int i = 0 ; i < sequence.size() ; ++i) {
+    double lq = 0.;
+    unsigned int lb, hb;
+    if (i < _lframe ) {
+      lb = 0;
+    } else {
+      lb = i - _lframe;
+    }
+    if (i + _rframe >= sequence.size()) {
+      hb = sequence.size() - 1;
+    } else {
+      hb = i + _rframe;
+    }
+    for (unsigned int j = lb ; j <= hb ; ++j) {
+      lq += q[j];
+    }
+    lq = lq / (hb - lb + 1);
+    if (lq < _quality) {
+      seq->setElement(i, "N");
+    }
+  }
+  // Adding sequence to container
   vsc.addSequence(* seq);
 }
 
